Sonar fixes for update to JDK 17 (#358)
Rules fixed:
* java:S6204: "Stream.toList()" method should be used instead of
  "collectors" when unmodifiable list needed
* java:S6201 - Pattern Matching for "instanceof" operator should be
  used instead of simple "instanceof" + cast

Even where we are collecting toList(), I replaced these as well, since
we really want to be returning immutable (unmodifiable) lists anyway.